fix:click on mobile

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -51,6 +51,7 @@
     @extend %overlay !optional;
     transform: translateY(-250%);
     transition: transform 0.4s ease-in-out;
+    height: 100vh;
     .input-search {
       background: v.$dark-color;
       padding: 3rem;
@@ -109,7 +110,7 @@
 
 .bookmark-overlay {
   @extend %overlay !optional;
-  transform: translateX(1100px);
+  transform: translateX(1800px);
   transition: transform 0.5s ease-in-out;
   .bookmarks-fetaures {
     position: fixed;
